--- a/ribin-cgi/conf.yaml
+++ b/ribin-cgi/conf.yaml
@@ -1,6 +1,7 @@
 serviceConfig:
   env: local
-  port: 8889
+  port: 8888
+  backendAddr: 127.0.0.1:8889
 logConfig:
   logLevel: debug
   logPath: server.log
