fix:调试python的config模块

--- a/ribin-scripts/python/config-example.yaml
+++ b/ribin-scripts/python/config-example.yaml
@@ -5,6 +5,6 @@ ServiceConfig:
   redis_username: ""
   redis_password: ""
 LogConfig:
-  log_level: debug
+  log_level: DEBUG
   log_path: server.log
   log_mode: file
