--- a/ribin-scripts/python/pyrightconfig.json
+++ b/ribin-scripts/python/pyrightconfig.json
@@ -1,11 +1,12 @@
 {
-  "include": [
-    "common"
-  ],
-  "exclude": [
-    "**/__pycache__"
-  ],
-  "defineConstant": {
-    "DEBUG": true
-  }
+    "include": [
+        "common",
+        "aigc"
+    ],
+    "exclude": [
+        "**/__pycache__"
+    ],
+    "defineConstant": {
+        "DEBUG": true
+    }
 }
